# rsparse

./: .Rbuildignore  .gitignore  CRAN-RELEASE  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  cran-comments.md
.github/: FUNDING.yml
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: ALS.R  BaseRecommender.R  GloVe.R  MatrixFactorizationRecommender.R  RcppExports.R  SoftALS.R  SoftImpute.R  SoftSVD.R  SoftUtils.R  WRMF.R  als_implicit.R  configure.R  configure.R.in  cross-validation.R  data.R  eval.R  kmeans.R  linear-flow.R  methods.R  metrics.R  model_FTRL.R  model_FactorizationMachine.R  model_GloVe.R  model_LinearFlow.R  model_PureSVD.R  model_RankMF.R  model_ScaleNormalize.R  model_WRMF.R  nnls.R  read_write.R  reco.R  splr.R  utils.R  utils_SoftALS.R  zzz.R
data/: movielens100k.RData
inst/include/: mapped_csc.hpp  mapped_csr.hpp  nnls.hpp  wrmf.hpp  wrmf_explicit.hpp  wrmf_implicit.hpp  wrmf_utils.hpp
man/: ALS.Rd  ALS_implicit.Rd  FTRL.Rd  FactorizationMachine.Rd  GloVe.Rd  GlobalVectors.Rd  LinearFlow.Rd  MatrixFactorizationRecommender.Rd  PureSVD.Rd  ScaleNormalize.Rd  WRMF.Rd  ap_k.Rd  casting.Rd  detect_number_omp_threads.Rd  mathematical-functions.Rd  matmult.Rd  metrics.Rd  movielens100k.Rd  operators.Rd  rbind2-method.Rd  rbind_csr.Rd  read.sparse.Rd  slice.Rd  soft_impute.Rd  t_shallow.Rd  train_test_split.Rd  write.sparse.Rd
src/: CSR.cpp  FTRL.cpp  FactorizationMachine.cpp  GloVe.cpp  Makevars  Makevars.in  Makevars.win  MappedCSR.h  MappedSparseMatrices.h  ProductCsrDense.cpp  ProductSparseDense.cpp  RcppExports.cpp  SolverAlsWrmf.cpp  SolverBPRMF.cpp  SolverRankMF.cpp  TopProduct.cpp  als_implicit_core_solver.cpp  factorization_machine.cpp  install.libs.R  kmeans.cpp  matrix_csr.cpp  matrix_product.cpp  matrix_top_product.cpp  nnls.cpp  rankmf.cpp  read_write.h  reader.cpp  rsparse.h  utils.cpp  writer.cpp  wrmf_explicit.cpp  wrmf_implicit.cpp  wrmf_init.cpp
tests/: testthat.R
tests/testthat/: test-bprmf.R  test-conversions.R  test-csr-subset.R  test-fm.R  test-ftrl.R  test-glove.R  test-linear-flow.R  test-matmul.R  test-metrics.R  test-puresvd.R  test-rbind.R  test-read-write.R  test-soft-als.R  test-soft-svd.R  test-sum-prod.R  test-top-product.R  test-wrmf.R
